# web-car-control

./: .gitattributes  .gitignore  Jetson小车节点与功能映射方案.md  README.md
.github/workflows/: pipeline.yml
docs/: CICD.md
web/backend/: pyproject.toml  requirements.txt  run_demo.cmd
web/backend/icar_web/: __init__.py  app.py  bridge.py  command.py  config.py  events.py  health.py  manager.py  map_store.py  models.py  service.py  supervisor.py
web/backend/tests/: test_bridge.py  test_cicd.py  test_config.py  test_manager.py  test_map_store.py  test_motion_policy.py  test_service.py
web/config/: system.json
web/deploy/: deploy_from_ci.sh  deploy_guard.sh  install_on_jetson.sh  ohcar-web.service  restart_ohcar_web.sh
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.jsx  api.js  styles.css
web/frontend/src/components/: Chrome.jsx  Controls.jsx  MapCanvas.jsx  StatusPanel.jsx
web/frontend/src/features/: registry.jsx
web/frontend/src/hooks/: useConsole.js
web/ros/: icar_ros_bridge.py  managed_process.sh  motion_convention.py  motion_policy.py  select_map.sh  start_map_server.sh  task_guard.py  velocity_arbiter.py
